RESOLVED FIXED147521
Pass ControlStates& to RenderTheme methods instead of ControlStates*
https://bugs.webkit.org/show_bug.cgi?id=147521
Summary Pass ControlStates& to RenderTheme methods instead of ControlStates*
alan
Reported 2015-07-31 21:08:34 PDT
SSIA
Attachments
Patch (20.69 KB, patch)
2015-07-31 21:11 PDT, alan
no flags
Patch (21.09 KB, patch)
2015-08-03 09:38 PDT, alan
no flags
alan
Comment 1 2015-07-31 21:11:20 PDT
WebKit Commit Bot
Comment 2 2015-08-03 09:08:47 PDT
Comment on attachment 257991 [details] Patch Rejecting attachment 257991 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 257991, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: meMac.mm patching file Source/WebCore/rendering/RenderBox.cpp Hunk #1 FAILED at 1332. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/rendering/RenderBox.cpp.rej patching file Source/WebCore/rendering/RenderTheme.cpp patching file Source/WebCore/rendering/RenderTheme.h patching file Source/WebCore/rendering/RenderThemeMac.mm Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Andreas Kling']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.webkit.org/results/11526
alan
Comment 3 2015-08-03 09:38:05 PDT
alan
Comment 4 2015-08-03 10:15:01 PDT
Note You need to log in before you can comment on or make changes to this bug.