Pass ControlStates& to RenderTheme methods instead of ControlStates* https://bugs.webkit.org/show_bug.cgi?id=147521

Reviewed by Andreas Kling.

No change in functionality.

* platform/Theme.h:
(WebCore::Theme::selectionColor):
(WebCore::Theme::paint):
(WebCore::Theme::inflateControlPaintRect):
* platform/mac/ThemeMac.h:
* platform/mac/ThemeMac.mm:
(WebCore::updateStates):
(WebCore::convertControlStatesToThemeDrawState):
(WebCore::configureToggleButton):
(WebCore::sharedRadioCell):
(WebCore::sharedCheckboxCell):
(WebCore::paintToggleButton):
(WebCore::setUpButtonCell):
(WebCore::button):
(WebCore::paintButton):
(WebCore::paintStepper):
(WebCore::ThemeMac::ensuredView):
(WebCore::ThemeMac::inflateControlPaintRect):
(WebCore::ThemeMac::paint):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::paintBoxDecorations):
* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::paint):
(WebCore::RenderTheme::adjustRepaintRect):
(WebCore::RenderTheme::updateControlStatesForRenderer):
* rendering/RenderTheme.h:
* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::documentViewFor):

Canonical link: https://commits.webkit.org/165626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187741 268f45cc-cd09-0410-ab3c-d52691b4dbfc