Source/WebCore/platform/Theme.h
@@ -68,7 +68,7 @@ public:
     virtual bool controlDrawsFocusOutline(ControlPart) const { return true; }
 
     // Methods for obtaining platform-specific colors.
-    virtual Color selectionColor(ControlPart, const ControlStates*, SelectionPart) const { return Color(); }
+    virtual Color selectionColor(ControlPart, const ControlStates&, SelectionPart) const { return Color(); }
     virtual Color textSearchHighlightColor() const { return Color(); }
     
     // CSS system colors and fonts
@@ -100,13 +100,13 @@ public:
     virtual bool controlRequiresPreWhiteSpace(ControlPart) const { return false; }
 
     // Method for painting a control. The rect is in zoomed coordinates.
-    virtual void paint(ControlPart, ControlStates*, GraphicsContext*, const FloatRect& /*zoomedRect*/, float /*zoomFactor*/, ScrollView*, float /*deviceScaleFactor*/, float /*pageScaleFactor*/) { }
+    virtual void paint(ControlPart, ControlStates&, GraphicsContext*, const FloatRect& /*zoomedRect*/, float /*zoomFactor*/, ScrollView*, float /*deviceScaleFactor*/, float /*pageScaleFactor*/) { }
 
     // Some controls may spill out of their containers (e.g., the check on an OS X checkbox).  When these controls repaint,
     // the theme needs to communicate this inflated rect to the engine so that it can invalidate the whole control.
     // The rect passed in is in zoomed coordinates, so the inflation should take that into account and make sure the inflation
     // amount is also scaled by the zoomFactor.
-    virtual void inflateControlPaintRect(ControlPart, const ControlStates*, FloatRect& /*zoomedRect*/, float /*zoomFactor*/) const { }
+    virtual void inflateControlPaintRect(ControlPart, const ControlStates&, FloatRect& /*zoomedRect*/, float /*zoomFactor*/) const { }
 
     virtual void drawNamedImage(const String&, GraphicsContext*, const FloatRect&) const;
 
