Source/WebCore/platform/mac/ThemeMac.mm
@@ -184,7 +184,7 @@ static void setControlSize(NSCell* cell, const std::array<IntSize, 3>& sizes, co
         [cell setControlSize:(NSControlSize)size];
 }
 
-static void updateStates(NSCell* cell, const ControlStates* controlStates, bool useAnimation = false)
+static void updateStates(NSCell* cell, const ControlStates& controlStates, bool useAnimation = false)
 {
 #if __MAC_OS_X_VERSION_MIN_REQUIRED < 101000
     UNUSED_PARAM(useAnimation);
@@ -195,7 +195,7 @@ static void updateStates(NSCell* cell, const ControlStates* controlStates, bool 
     if (AXObjectCache::accessibilityEnhancedUserInterfaceEnabled())
         useAnimation = false;
     
-    ControlStates::States states = controlStates->states();
+    ControlStates::States states = controlStates.states();
 
     // Hover state is not supported by Aqua.
     
@@ -234,9 +234,9 @@ static void updateStates(NSCell* cell, const ControlStates* controlStates, bool 
     // a view in a window whose key state can be detected.
 }
 
-static ThemeDrawState convertControlStatesToThemeDrawState(ThemeButtonKind kind, const ControlStates* controlStates)
+static ThemeDrawState convertControlStatesToThemeDrawState(ThemeButtonKind kind, const ControlStates& controlStates)
 {
-    ControlStates::States states = controlStates->states();
+    ControlStates::States states = controlStates.states();
 
     if (!(states & ControlStates::EnabledState))
         return kThemeStateUnavailableInactive;
@@ -328,7 +328,7 @@ static LengthSize radioSize(const FontCascade& font, const LengthSize& zoomedSiz
     return sizeFromFont(font, zoomedSize, zoomFactor, radioSizes());
 }
     
-static void configureToggleButton(NSCell* cell, ControlPart buttonType, const ControlStates* states, const IntSize& zoomedSize, float zoomFactor, bool isStateChange)
+static void configureToggleButton(NSCell* cell, ControlPart buttonType, const ControlStates& states, const IntSize& zoomedSize, float zoomFactor, bool isStateChange)
 {
     // Set the control size based off the rectangle we're painting into.
     setControlSize(cell, buttonType == CheckboxPart ? checkboxSizes() : radioSizes(), zoomedSize, zoomFactor);
@@ -354,7 +354,7 @@ static RetainPtr<NSButtonCell> createToggleButtonCell(ControlPart buttonType)
     return toggleButtonCell;
 }
     
-static NSButtonCell *sharedRadioCell(const ControlStates* states, const IntSize& zoomedSize, float zoomFactor)
+static NSButtonCell *sharedRadioCell(const ControlStates& states, const IntSize& zoomedSize, float zoomFactor)
 {
     static NSButtonCell *radioCell = createToggleButtonCell(RadioPart).leakRef();
 
@@ -362,7 +362,7 @@ static NSButtonCell *sharedRadioCell(const ControlStates* states, const IntSize&
     return radioCell;
 }
     
-static NSButtonCell *sharedCheckboxCell(const ControlStates* states, const IntSize& zoomedSize, float zoomFactor)
+static NSButtonCell *sharedCheckboxCell(const ControlStates& states, const IntSize& zoomedSize, float zoomFactor)
 {
     static NSButtonCell *checkboxCell = createToggleButtonCell(CheckboxPart).leakRef();
 
@@ -376,14 +376,14 @@ static bool drawCellFocusRing(NSCell *cell, NSRect cellFrame, NSView *controlVie
     return false;
 }
 
-static void paintToggleButton(ControlPart buttonType, ControlStates* controlStates, GraphicsContext* context, const FloatRect& zoomedRect, float zoomFactor, ScrollView* scrollView)
+static void paintToggleButton(ControlPart buttonType, ControlStates& controlStates, GraphicsContext* context, const FloatRect& zoomedRect, float zoomFactor, ScrollView* scrollView)
 {
     BEGIN_BLOCK_OBJC_EXCEPTIONS
 
-    RetainPtr<NSButtonCell> toggleButtonCell = static_cast<NSButtonCell *>(controlStates->platformControl());
+    RetainPtr<NSButtonCell> toggleButtonCell = static_cast<NSButtonCell *>(controlStates.platformControl());
     IntSize zoomedRectSize = IntSize(zoomedRect.size());
 
-    if (controlStates->isDirty()) {
+    if (controlStates.isDirty()) {
         if (!toggleButtonCell)
             toggleButtonCell = createToggleButtonCell(buttonType);
         configureToggleButton(toggleButtonCell.get(), buttonType, controlStates, zoomedRectSize, zoomFactor, true);
@@ -398,7 +398,7 @@ static void paintToggleButton(ControlPart buttonType, ControlStates* controlStat
         }
         configureToggleButton(toggleButtonCell.get(), buttonType, controlStates, zoomedRectSize, zoomFactor, false);
     }
-    controlStates->setDirty(false);
+    controlStates.setDirty(false);
 
     GraphicsContextStateSaver stateSaver(*context);
 
@@ -442,16 +442,16 @@ static void paintToggleButton(ControlPart buttonType, ControlStates* controlStat
     [toggleButtonCell drawWithFrame:NSRect(inflatedRect) inView:view];
 #endif
 
-    if (!isAnimating && (controlStates->states() & ControlStates::FocusState))
+    if (!isAnimating && (controlStates.states() & ControlStates::FocusState))
         needsRepaint = drawCellFocusRing(toggleButtonCell.get(), inflatedRect, view);
     [toggleButtonCell setControlView:nil];
 
 #if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
     needsRepaint |= [toggleButtonCell _stateAnimationRunning];
 #endif
-    controlStates->setNeedsRepaint(needsRepaint);
+    controlStates.setNeedsRepaint(needsRepaint);
     if (needsRepaint)
-        controlStates->setPlatformControl(toggleButtonCell.get());
+        controlStates.setPlatformControl(toggleButtonCell.get());
 
     END_BLOCK_OBJC_EXCEPTIONS
 }
@@ -488,7 +488,7 @@ static NSButtonCell *leakButtonCell(ButtonCellType type)
     return cell;
 }
 
-static void setUpButtonCell(NSButtonCell *cell, ControlPart part, const ControlStates* states, const IntSize& zoomedSize, float zoomFactor)
+static void setUpButtonCell(NSButtonCell *cell, ControlPart part, const ControlStates& states, const IntSize& zoomedSize, float zoomFactor)
 {
     // Set the control size based off the rectangle we're painting into.
     const std::array<IntSize, 3>& sizes = buttonSizes();
@@ -505,9 +505,9 @@ static void setUpButtonCell(NSButtonCell *cell, ControlPart part, const ControlS
     updateStates(cell, states);
 }
 
-static NSButtonCell *button(ControlPart part, const ControlStates* controlStates, const IntSize& zoomedSize, float zoomFactor)
+static NSButtonCell *button(ControlPart part, const ControlStates& controlStates, const IntSize& zoomedSize, float zoomFactor)
 {
-    ControlStates::States states = controlStates->states();
+    ControlStates::States states = controlStates.states();
     NSButtonCell *cell;
     if (states & ControlStates::DefaultState) {
         static NSButtonCell *defaultCell = leakButtonCell(DefaultButtonCell);
@@ -525,12 +525,12 @@ static float buttonFocusRectOutlineWidth()
     return 3.0f;
 }
     
-static void paintButton(ControlPart part, ControlStates* controlStates, GraphicsContext* context, const FloatRect& zoomedRect, float zoomFactor, ScrollView* scrollView, float deviceScaleFactor, float pageScaleFactor)
+static void paintButton(ControlPart part, ControlStates& controlStates, GraphicsContext* context, const FloatRect& zoomedRect, float zoomFactor, ScrollView* scrollView, float deviceScaleFactor, float pageScaleFactor)
 {
     BEGIN_BLOCK_OBJC_EXCEPTIONS
     
     // Determine the width and height needed for the control and prepare the cell for painting.
-    ControlStates::States states = controlStates->states();
+    ControlStates::States states = controlStates.states();
     NSButtonCell *buttonCell = button(part, controlStates, IntSize(zoomedRect.size()), zoomFactor);
     GraphicsContextStateSaver stateSaver(*context);
 
@@ -597,7 +597,7 @@ static void paintButton(ControlPart part, ControlStates* controlStates, Graphics
             drawCellFocusRing(buttonCell, NSRect(inflatedRect), view);
     }
     
-    controlStates->setNeedsRepaint(false);
+    controlStates.setNeedsRepaint(false);
 
     [buttonCell setControlView:nil];
 
@@ -627,7 +627,7 @@ static NSControlSize stepperControlSizeForFont(const FontCascade& font)
     return NSMiniControlSize;
 }
 
-static void paintStepper(ControlStates* states, GraphicsContext* context, const FloatRect& zoomedRect, float zoomFactor, ScrollView*)
+static void paintStepper(ControlStates& states, GraphicsContext* context, const FloatRect& zoomedRect, float zoomFactor, ScrollView*)
 {
     // We don't use NSStepperCell because there are no ways to draw an
     // NSStepperCell with the up button highlighted.
@@ -669,7 +669,7 @@ static void paintStepper(ControlStates* states, GraphicsContext* context, const 
 
 // This will ensure that we always return a valid NSView, even if ScrollView doesn't have an associated document NSView.
 // If the ScrollView doesn't have an NSView, we will return a fake NSView set up in the way AppKit expects.
-NSView *ThemeMac::ensuredView(ScrollView* scrollView, const ControlStates* controlStates, bool useUnparentedView)
+NSView *ThemeMac::ensuredView(ScrollView* scrollView, const ControlStates& controlStates, bool useUnparentedView)
 {
     if (!useUnparentedView) {
         if (NSView *documentView = scrollView->documentView())
@@ -680,7 +680,7 @@ NSView *ThemeMac::ensuredView(ScrollView* scrollView, const ControlStates* contr
     static WebCoreThemeView *themeView = [[WebCoreThemeView alloc] init];
     [themeView setFrameSize:NSSizeFromCGSize(scrollView->totalContentsSize())];
 
-    themeWindowHasKeyAppearance = !(controlStates->states() & ControlStates::WindowInactiveState);
+    themeWindowHasKeyAppearance = !(controlStates.states() & ControlStates::WindowInactiveState);
 
     return themeView;
 }
@@ -782,7 +782,7 @@ LengthBox ThemeMac::controlPadding(ControlPart part, const FontCascade& font, co
     }
 }
 
-void ThemeMac::inflateControlPaintRect(ControlPart part, const ControlStates* states, FloatRect& zoomedRect, float zoomFactor) const
+void ThemeMac::inflateControlPaintRect(ControlPart part, const ControlStates& states, FloatRect& zoomedRect, float zoomFactor) const
 {
     BEGIN_BLOCK_OBJC_EXCEPTIONS
     IntSize zoomRectSize = IntSize(zoomedRect.size());
@@ -839,7 +839,7 @@ void ThemeMac::inflateControlPaintRect(ControlPart part, const ControlStates* st
     END_BLOCK_OBJC_EXCEPTIONS
 }
 
-void ThemeMac::paint(ControlPart part, ControlStates* states, GraphicsContext* context, const FloatRect& zoomedRect, float zoomFactor, ScrollView* scrollView, float deviceScaleFactor, float pageScaleFactor)
+void ThemeMac::paint(ControlPart part, ControlStates& states, GraphicsContext* context, const FloatRect& zoomedRect, float zoomFactor, ScrollView* scrollView, float deviceScaleFactor, float pageScaleFactor)
 {
     switch (part) {
         case CheckboxPart:
